Revert "Add jspecify annotations to shared"
This reverts commit bd3c63d90c7a93094f8b4072b868416ddcf3425a.